fixing broken css

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -131,7 +131,7 @@ strong {
 img {
   position: relative;
   margin: 0 auto;
-  max-width: 100%
+  max-width: 100%;
   padding: 5px;
   margin: 10px 0 10px 0;
   border: 1px solid #ebebeb;
